fix(LabellingManager): Fixes z-index problem with header menu
Fixes z-index problem with header menu

fix #508

--- a/src/components/Labelling/LabellingManager.css
+++ b/src/components/Labelling/LabellingManager.css
@@ -1,7 +1,7 @@
 .labellingComponent {
   position: absolute;
   text-align: center;
-  z-index: 300;
+  z-index: 999;
   transition: all 200ms linear;
 }
 
